--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
+    "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
