--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coreui/react-chartjs": "^3.0.0",
     "@hookform/resolvers": "^3.5.0",
+    "@instructure/ui-file-drop": "^9.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
