--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coreui/react-chartjs": "^3.0.0",
     "@hookform/resolvers": "^3.5.0",
     "@instructure/ui-file-drop": "^9.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -21,6 +20,7 @@
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
@@ -28,6 +28,7 @@
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^7.0.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
