--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "prettier": "^3.3.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^7.0.0",
