--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -31,6 +32,7 @@
     "embla-carousel-react": "^8.1.3",
     "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "nextjs-toploader": "^1.6.12",
     "prettier": "^3.3.2",
