--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
+    "file64": "^1.0.3",
     "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
     "moment-timezone": "^0.5.45",
