--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@ramonak/react-progress-bar": "^5.2.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
     "add-to-calendar-button": "^2.6.18",
