--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-spinners": "^0.13.8",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.5",
+    "seed-color": "^2.0.1",
     "sharp": "^0.33.4",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
