--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
     "moment-timezone": "^0.5.45",
+    "mongoose": "^8.5.2",
     "next": "14.2.3",
     "nextjs-toploader": "^1.6.12",
     "prettier": "^3.3.2",
